fix responsive issue

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <p>- All Rights Reserved @2024</p>
       <hr />
       <div class="container-fluid d-flex flex-wrap">
-        <ul class="d-flex gap-3 mt-2 p-5 col-8">
+        <ul class="d-flex gap-3 mt-2 p-5 col-8 flex-wrap">
           <li><a href="">Terms</a></li>
           <li><a href="">About</a></li>
           <li><a href="">Privacy</a></li>
